<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:fabSize="normal"
                app:backgroundTint="@color/colorWhite"
                android:src="@drawable/ic_cartao"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagar"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnVender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:backgroundTint="@color/colorWhite"
                app:fabSize="normal"
                android:src="@drawable/ic_vender"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vender"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnComprar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:backgroundTint="@color/colorWhite"
                app:fabSize="normal"
                android:src="@drawable/ic_comprar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comprar"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>
                <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSeustitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@color/colorWhite"
            app:fabSize="normal"
            android:src="@drawable/ic_titulos"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seus_titulos"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>
    </LinearLayout>

        </LinearLayout>