<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.darthorg.virtualpay.CartaoVirtual">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="@color/colorGrey"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/cartao_virtual"
            app:subtitle="Wendell Ugalds"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_da_conta"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simbolo_real"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/valor_cartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25.000,00"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabTextColor="@color/colorWhiteTransparente127"
            app:tabSelectedTextColor="@color/colorWhite"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>
