<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhiteFundo"
    tools:context="com.darthorg.virtualpay.JogoAberto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTransparente"
            android:text="0"/>
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparente"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:title=" "
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banco_imobiliario"
                android:textColor="@color/colorBlack"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Virtual Pay"
                android:textSize="18dp"
                android:textColor="@color/colorBlackTransparente127"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <!--atraz do cartão-->
        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cor_cartao_white"
            android:layout_centerHorizontal="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pagar"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_cartao"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnVender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vender"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_vender"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnComprar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comprar"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_comprar"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>



            </LinearLayout>


        </RelativeLayout>

        <!--Cartão-->
        <LinearLayout
            android:id="@+id/cartao"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@drawable/cor_cartao_grey"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Credito"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="25dp"/>
                <ImageView
                    android:id="@+id/bandeira"
                    android:layout_width="55dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="50dp"
                    android:src="@drawable/visa"/>
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_margin="15dp"
                android:src="@drawable/chip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx  xxxx   xxxx  "
                android:textColor="@color/colorWhite"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/valor_cartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29.356"
                android:maxLength="9"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nome_jogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fulano de Tal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titulos. "
                android:textSize="12dp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/titulos_jogadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29/30"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorWhite"
            android:elevation="5dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNoticia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noticias"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:drawableTop="@drawable/ic_news"
                android:background="@color/colorTransparente"
                android:drawablePadding="10dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/btnBanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banco"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:drawableTop="@drawable/ic_banco"
                android:background="@color/colorTransparente"
                android:drawablePadding="10dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/btnJogadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogadores"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:drawableTop="@drawable/ic_jogadores"
                android:background="@color/colorTransparente"
                android:drawablePadding="10dp"
                android:padding="5dp"/>



        </LinearLayout>





    </RelativeLayout>









</LinearLayout>
