<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhiteFundo"
    tools:context="com.darthorg.virtualpay.Inicio">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:title="Banco Imobiliario"
        app:subtitle="Virtual pay"
        android:id="@+id/toolbar" />

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <!--atraz do cartão-->
        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cor_cartao_white"
            android:layout_centerHorizontal="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSorteReves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorte_reves"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_sorte_reves"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnTitulos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulos"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_titulos"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btnJogadores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jogadores"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_jogadores"
                    android:background="@color/colorTransparente"
                    android:drawablePadding="10dp"
                    android:padding="5dp"/>



            </LinearLayout>


        </RelativeLayout>

        <!--Cartão-->
        <LinearLayout
            android:id="@+id/cartao"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@drawable/cor_cartao_grey"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Credito"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="25dp"/>
                <ImageView
                    android:id="@+id/bandeira"
                    android:layout_width="55dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="50dp"
                    android:src="@drawable/visa"/>
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_margin="15dp"
                android:src="@drawable/chip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx  xxxx   xxxx  "
                android:textColor="@color/colorWhite"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/valor_cartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25000"
                android:maxLength="9"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nome_jogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wendell Ugalds"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titulos. "
                android:textSize="12dp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/titulos_jogadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="03/30"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        </LinearLayout>






    </RelativeLayout>









</LinearLayout>
